# spotify-wrapped-pro

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
scripts/: collector.plist  ingest.py
wrapped/: auth.py  config.py  db.py  queries.py  schema.sql  stats.py
wrapped/ingest/: enrich.py  extended.py  recent.py  snapshot.py
wrapped/views/: evolution.py  fun.py  profile.py  tops.py
